# flower

framework/: FedPG_BR_client.py  fedPG_BR.py  main.py  main_paper_settings.py  main_single_client.py  policy_network.py  test.py
framework/benchmark/: fedpg_br.py  flower_fedpg_client.py  flower_fedpg_strategy.py  flower_fedpg_strategy_FIXED.py  options_flower.py  original_configs_v2.py  original_policy.py  requirements.txt  run_fedpg_flower.py  utils_flower.py  worker_flower.py
framework/benchmark/fedpg_br/: README.md  pyproject.toml
framework/benchmark/fedpg_br/fedpg_br/: __init__.py  client_app.py  config.py
framework/benchmark/fedpg_br/fedpg_br/core/: __init__.py  attacks.py
framework/benchmark/fedpg_br/fedpg_br/flower/: worker.py
framework/benchmark/fedpg_br_old/: README.md  __init__.py  config.py  policy.py  pyproject.toml  run.py  utils.py
framework/benchmark/fedpg_br_old/core/: __init__.py  byzantine.py  gradient.py  trajectory.py
framework/benchmark/fedpg_br_old/fedpg_br/: __init__.py  client_app.py  config.py  policy.py  server_app.py
framework/benchmark/fedpg_br_old/fedpg_br/core/: __init__.py  byzantine.py  gradient.py
framework/benchmark/fedpg_br_old/fedpg_br/flower/: worker.py
framework/benchmark/fedpg_br_old/flower/: __init__.py  client.py  strategy.py  worker.py
framework/benchmark/fedpg_br_oldv2/: pyproject.toml
framework/benchmark/fedpg_br_oldv2/fedpg_br/: client_app.py  config.py  policy.py  server_app.py
framework/benchmark/fedpg_br_oldv2/fedpg_br/flower/: __init__.py  worker.py
framework/benchmark/outputs/CartPole-v1/w10_b0_random-noise/20260120_100244/: config.json
framework/benchmark/outputs/CartPole-v1/w10_b0_random-noise/20260120_100354/: config.json  result_seed0.json
framework/benchmark/outputs/CartPole-v1/w1_b0_random-noise/20260120_114517/: config.json  result_seed0.json
framework/fedpg_demo/: policy_network.py  server_strategy.py
framework/py/flwr/client/: FedPG_BR_client  FedPG_BR_client.py
framework/py/flwr/server/strategy/: fedPG_BR  fedPG_BR.py
framework/py/flwr/server/utils/: policy
(+36 files in other folders)
