[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedpg-br"
version = "0.1.0"
description = "Fault-Tolerant Federated Reinforcement Learning (FedPG-BR)"
requires-python = ">=3.9"
dependencies = [
    "flwr[simulation]>=1.13.0",
    "torch>=1.12.0",
    "numpy>=1.21.0",
    "gymnasium>=0.26.0",
    "chardet",
]

[tool.hatch.build.targets.wheel]
packages = ["fedpg_br"]

[tool.flwr.app]
publisher = "fedpg-br"

[tool.flwr.app.components]
serverapp = "fedpg_br.server_app:app"
clientapp = "fedpg_br.client_app:app"

[tool.flwr.app.config]
env = "LunarLander-v3"
num-server-rounds = 150
num-workers = 3
num-byzantine = 0
attack-type = "random-noise"
use-fedpg-br = false

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.0